# shellclaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.example.toml  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docker/: entrypoint-volume-build.sh
docs/: index.html
docs/assets/: intro.webm
scripts/: fetch_tldr.py
src/shellclaw/: __init__.py  __main__.py  config.py  main.py  pty_emulator.py  pty_sanitize.py  token_usage.py  utils.py
src/shellclaw/agent/: __init__.py  compress.py  context.py  loop.py  prompts.py  terminal_history.py  tools.py
src/shellclaw/health/: __init__.py  snapshot.py
src/shellclaw/hooks/: __init__.py  shellclaw.fish  shellclaw_shell.sh
src/shellclaw/providers/: __init__.py  anthropic.py  base.py  manager.py  openai_compat.py  reasoning_tool_xml.py  stream_log.py
src/shellclaw/safety/: __init__.py  check.py  risk.py  sandbox.py  undo.py  web_search_safety.py
src/shellclaw/session/: __init__.py  hardware.py  store.py
src/shellclaw/simplex/: __init__.py  bridge.py  protocol.py
src/shellclaw/tui/: __init__.py  app.py  clipboard.py  command_db.py  shell_highlighter.py  shell_suggester.py
src/shellclaw/tui/screens/: main.py  main.tcss  onboarding.py  onboarding.tcss  settings.py  simplex_setup.py
src/shellclaw/tui/widgets/: chat.py  explain.py  health_banner.py  input_chrome.py  nested_shell_notice.py  reasoning.py  terminal.py  undo_log.py
src/shellclaw/wiki/: __init__.py  commands.py  glossary.py  parser.py  tldr.py
src/shellclaw/wiki/data/: glossary.json
tests/: test_chat_fence.py  test_check.py  test_compress.py  test_journal_logs.py  test_loop.py  test_providers.py  test_pty_osc.py  test_pty_sanitize.py  test_reasoning_tool_xml.py  test_sandbox.py  test_shell_terminal_input.py  test_simplex_protocol.py  test_token_usage.py  test_undo.py  test_web_search.py  test_wiki.py
